kindle alignment bug

--- a/app/webroot/css/components/flyout.scss
+++ b/app/webroot/css/components/flyout.scss
@@ -1,3 +1,7 @@
+*{
+	-webkit-tap-highlight-color: red;
+}
+
 
 //a[href]{ outline: 1px solid red; }
 a[href*="_LSP"], a[href*="http://"],a[href*="http://"], a[href*=".html"]{ outline: none; }
